# python-tello

./: .deepsource.toml  COMPLEX_GUIDE.md  LICENCE  LICENSE.txt  README.md  SET&READ_GUIDE.md  VERSIONS.md  WRITEHERE.py  pyproject.toml  setup.py  tello.py  telloFile.py  telloLive.py
.github/workflows/: codeql-analysis.yml
guides/: COMPLEX_GUIDE.md  README.md  SET&READ_GUIDE.md
tello-sdk/: __init__.py  tello.py  telloLive.py
tello_sdk/: __init__.py  tello.py  telloLive.py
