[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "tello_sdk"
version = "2.4.2"
description = "Python SDK fro the Tello EDU and RMTT drones, with all commands and more."
dependencies = ["sentry_sdk"]
authors = [{name="ErnGusMik"}]
readme = "README.md"
requires-python = ">=3.6.0"
keywords = [
    "tello",
    "drone",
    "sdk",
    "python",
    "python3",
    "rmtt",
    "edu",
    "telloedu",
    "tello-rmtt",
    "tello-edu",
    "sdk"
]
license = { file = "LICENSE" }
classifiers=[
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["tello_sdk*"]

[project.urls]
Homepage = "https://github.com/ErnGusMik/python-tello"